--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   riverpod_generator: ^2.0.0
   build_runner: ^2.3.3
-  mockito: ^5.3.2
+  riverpod_lint: ^1.1.2
 
 flutter:
   uses-material-design: true
