--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   riverpod_annotation: ^2.0.0
   sqflite: ^2.2.5
   path: ^1.8.2
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
